...
                    // MARK: - Error message
                    
                    Group {
                        if errorMessage.count > 0 {
                            Text(errorMessage)
                                .foregroundColor(.red)
                                .accessibility(identifier: "task-target-set-popup-error-message")
                        }
                    }
                    
                    // MARK: - Bubbles/DayPattern picker
                    
                    Group {
...
                        Picker(selection: self.$type, label: Text("Type")) {
                            ForEach(DayPattern.patternType.allCases, id: \.self) { pt in
                                Text( self.dayPatternTypeLabels[pt] ?? "")
                            }
                        }
                        .foregroundColor(.accentColor)
                        .accessibility(identifier: "task-target-set-popup-pattern-type-picker")
                        .frame(height: typePickerHeight)
                        
                        // Days of week/month
                        if self.type == .dom {
                            BubbleRows<SaveFormatter.dayOfMonth>(presentationBase: .panel,
                                                                 bubbles: DayBubbleLabels.getDividedBubbles_daysOfMonth(bubblesPerRow: self.bubblesPerRow),
...
                    }
                    self.isBeingPresented = false
                }, label: {
                    Text("Done")
                })
                .foregroundColor(.accentColor)
                .accessibility(identifier: "task-target-set-popup-done-button")
                .disabled(self.maxOperator == .na && self.minOperator == .na)
                .disabled(!validDaysSelected()),
                
                trailing: Button(action: {
                    self.isBeingPresented = false
                }, label: {
...
