...
                    SelectDatePopup.init(
                        isBeingPresented: self.$isPresentingSelectStartDatePopup,
                        startDate: self.$startDate,
                        endDate: self.$endDate,
                        isStartDate: true,
                        label: "Select Start Date")})
                .accessibility(identifier: "start-date")
            
            Button(action: {
                self.isPresentingSelectEndDatePopup = true
            }, label: {
                Text(endDateLabel + Date.toMDYPresent(self.endDate))
            })
...
                    SelectDatePopup.init(
                        isBeingPresented: self.$isPresentingSelectEndDatePopup,
                        startDate: self.$startDate,
                        endDate: self.$endDate,
                        isStartDate: false,
                        label: "Select End Date")})
                .accessibility(identifier: "end-date")
            
        })
    }
}

